# founderhouse

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  DEVOPS_SETUP_SUMMARY.md  Dockerfile  INFRASTRUCTURE.md  ML_DELIVERY_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  SPRINT1_QUICKSTART.md  SPRINT2_COMPLETION_SUMMARY.md  SPRINT3_TESTING_SUMMARY.md  TESTING_QUICKSTART.md  TESTING_SUMMARY.md  backlog.md  datamodel.md  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  prd.md  pyproject.toml  pytest.ini  quickstart.sh  railway.json  railway.toml  requirements-dev.txt  requirements.txt  run_tests.sh  sprint-plan.md
backend/: .env.example  .gitignore  CHAIN_TESTS_SUMMARY.md  COVERAGE_PROGRESS_REPORT.md  DATABASE_ACCESS_ANALYSIS.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SPRINT1_DELIVERY.md  SPRINT2_DELIVERY.md  SPRINT2_QUICKSTART.md  SPRINT5_DELIVERY.md  SPRINT_3_IMPLEMENTATION.md  SPRINT_3_QUICK_START.md  TESTING_PROGRESS_SUMMARY.md  TESTING_SUMMARY.md  coverage.json  docker-compose.monitoring.yml  docker-compose.yml  prometheus.yml  pytest.ini  requirements.txt
docs/: SPRINT5_ARCHITECTURE_SUMMARY.md  SPRINT5_IMPLEMENTATION_GUIDE.md  anomaly_detection.md  architecture.md  briefing_templates.md  insights_briefings_architecture.md  integration_state_machine.md  kpi_taxonomy.md  llm_integration.md  mcp_integration_architecture.md  meeting_intelligence_architecture.md  sprint1_completion_summary.md  sprint3_completion_summary.md  sprint5_architecture.md  sprint5_discord_api_schemas.md  sprint5_orchestration_details.md  (+2 more)
(+292 files in other folders)
